samples/_failures_safe/1761378616_6ba1c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5ca85ab.c: In function ‘print_shortest_path’:
./samples/SAFE/__tmp_a5ca85ab.c:151:38: error: expected ‘;’ at end of input
  151 |     for (int i = path_len - 1; i >= 0
      |                                      ^
      |                                      ;
./samples/SAFE/__tmp_a5ca85ab.c:151:5: error: expected declaration or statement at end of input
  151 |     for (int i = path_len - 1; i >= 0
      |     ^~~
